--- a/bin/application.conf
+++ b/bin/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.crypto.secret = "changeme"
+play.crypto.secret = "]>ykU_lF[U`FWl0aam0t>vQI:E;2]nlbYsP;NYDBbCqlj`Mfxe4`5IX6LDZiOx`h"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
